--- a/mysite/templates/main.html
+++ b/mysite/templates/main.html
@@ -5,7 +5,7 @@
     <title>main</title>
 </head>
 <body>
-    {% include 'navbar.html' %}
+    {% include 'furniture.html' %}
     {% block content %}
     {% endblock %}
 </body>
