--- a/mysite/blog/templates/blog/home.html
+++ b/mysite/blog/templates/blog/home.html
@@ -6,6 +6,7 @@
 <ul>
   {% for item in items %}
   <a href="{% url 'update-room' item.id %}"> Edit </a>
+  <a href="{% url 'delete-room' item.id %}"> Delete </a>
     <li>{{ item.id }} - {{ item.name }}</li>
   {% endfor %}
 </ul>
